# TemDataBrowser

./: .gitignore  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
TemDataBrowser/: __init__.py
